--- a/docs/10.文档/10.快速开始/10.介绍.md
+++ b/docs/10.文档/10.快速开始/10.介绍.md
@@ -20,7 +20,7 @@ Color UI 我想大家都知晓吧，我就不过多阐述了，是 **文晓港**
 [ColorUI 在线展示](https://miren123.gitee.io/colorui-h5/#/) 因为右侧的h5是用iframe来嵌入的，因此字体和极小一部分的样式会有出入，文档里只做展示，比较完整的样式，点这里查看。
 
 **微信扫码预览h5**
-<img src="https://miren123.gitee.io/colorui-document/img/colorui-h5-code.png" style="zoom:25%;" />
+<img src="https://miren.lovemi.ren/colorui-document/img/colorui-h5-code.png" style="zoom:25%;" />
 
 
 ## 文档说明
